# MedVision-AI

./: .gitignore
backend/: pyproject.toml  test.py  train.py
backend/app/: main.py
backend/app/api/: chat.py  predict.py  upload.py
backend/app/models/: schemas.py
backend/app/rag/: chat.py  config.py  embed.py  generator.py  ingest.py  loader.py  retriever.py  splitter.py  summarizer.py  vectordb.py
backend/app/rag/prompts/: chat_prompt.py
backend/app/services/: detector.py  findings.py  image_service.py  knowledge.py  prompts.py  report.py  report_builder.py
backend/data/: diseases.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/chatbot/: ChatBot.jsx
frontend/src/components/common/: SummaryBanner.jsx
frontend/src/components/findings/: FindingsCard.jsx
frontend/src/components/landing/: Features.jsx  Hero.jsx  Preview.jsx
frontend/src/components/layout/: Footer.jsx  Navbar.jsx
frontend/src/components/report/: ReportCard.jsx
frontend/src/components/technical/: TechnicalCard.jsx
frontend/src/components/upload/: UploadCard.jsx
frontend/src/components/viewer/: AnnotatedImage.jsx  OriginalImage.jsx
frontend/src/pages/: Home.jsx  Landing.jsx
frontend/src/services/: api.js
frontend/src/utils/: pdf.js
