[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "ultralytics>=8.4.77",
    "uvicorn>=0.49.0",
]
